# v0idengine-template

./: CMakeCache.txt  CMakeLists.txt  Makefile  MyGame  cmake_install.cmake
include/: Game.hpp  SceneLevel.hpp  SceneSplashScreen.hpp
src/: Game.cpp  SceneLevel.cpp  SceneSplashScreen.cpp
